2007-02-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry_rect.h (corner_size, corner_rows, corner_columns): 
	(corner_index, corner_z, corner_x):
	(cell_corners, edge_corners): New and data members.
	* geometry_rect.C (GeometryRect::GeometryRect): Initialized.

2007-02-09  Per Abrahamsen  <abraham@dina.kvl.dk>

	* geometry.h (edge_center_z, edge_center_x, edge_center_y): New
	member functions.
	* geometry1d.h (edge_center_z): Implement.
	* geometry_rect.h, geometry_rect.C (edge_center_x, edge_center_y):
	Implement. 

2007-01-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* main.C: Not using namespace std.

2007-01-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* root_system.C, root_system.h (tick_daily): New parameters.
	* phenology_std.C, phenology_TSum.C, phenology.h (tick_daily): Ditto.
	* crop_std.C (tick): Update caller.
	* production.C, production.h (root_growth, leaf_growth)
	(tick_daily): New functions.
	* crop_std.C (tick): Use them.

2007-01-15  Per Abrahamsen  <abraham@dina.kvl.dk>

	* crpn.C (content): Fix partisioning under stress.

2006-12-21  Per Abrahamsen  <abraham@dina.kvl.dk>

	* harvesting.C (tick): Use 'Timestep' to simplify calculation.

	* time.h, time.C: Support minutes and seconds.
	* log_table.C (common_done): Use it.

2006-12-13  Per Abrahamsen  <abraham@dina.kvl.dk>

	* timestep.C: New submodel.
	* Makefile (SUBMODELS): Added it.

2006-12-12  Per Abrahamsen  <abraham@dina.kvl.dk>

	* log.h (output_lazy): New macro.
	* column_std.C (output): Use it.
	* bioincorporation.C (output): Ditto.

	* assertion.C (notreached): New assertion.
	* All: Use it.

	* All: Removed timestep.h.

2006-12-11  Per Abrahamsen  <abraham@dina.kvl.dk>

	* alist.C: Better panic messages.

	* mathlib.h (pow, sqrt, log, acos, asin): Removed "safe" versions.

2006-12-06  Per Abrahamsen  <abraham@dina.kvl.dk>

	* msoltranrect.h, msoltranrect.C: New component.
	* Makefile (COMPONENTS): Added it.
	* msoltranrect_2x1.C: New model.
	* Makefile (MODELS): Added it.
